feat(musics): expose list metadata
